--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@tailwindcss/postcss": "^4.0.6",
+    "@vercel/analytics": "^1.5.0",
     "ai": "^4.1.41",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
